<resources>
    <string name="app_name">Event Time</string>
    <string name="default_artist">Moğallar</string>
    <string name="default_city">Muğla</string>
    <string name="app_logo">icon_app</string>
    <string name="edit_hilt_name">Name </string>
    <string name="hilt_mail">E-mail </string>
    <string name="hint_password">Password</string>
    <string name="adress">adrees</string>
    <string name="date">date</string>
    <string name="ticket">"TİCKET "</string>
    <string name="concert_image">Concert Image</string>
    <string name="calender">calender</string>
    <string name="default_date">09/07/2024</string>
    <string name="location_name">Location Name</string>
    <string name="edit_profile">Delete</string>
    <string name="out">Log Out</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_signup">Sign up</string>
    <string name="edit_text_name">Buse</string>
    <string name="event_type">event type</string>
    <string name="default_event_type">default event type</string>
    <string name="default_country">default_country</string>
    <string name="edit_search">Full City Name...</string>
    <string name="default_url">buse@gmail.com</string>
    <string name="click">\nclick to call</string>
    <string name="default_time">10:00</string>
    <string name="back">Back</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="city">city</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>
    <string name="signup">Signup</string>
    <string name="account">account</string>
    <string name="error_user_creation_failed">Failed to create user</string>
    <string name="error_fill_email_password">Please enter email and password</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="description_image_city">image_city</string>
    <string name="home_event_name">Event Name</string>
    <string name="location_services_disabled">Location services are turned off. Please open.</string>
    <string name="open_settings">Settings</string>
    <string name="location_permission_denied">Location permission denied. Please allow..</string>
    <string name="grant_permission">Allow</string>
    <string name="home_background">Home Background</string>
    <string name="victory_sign">Victory Sign</string>
    <string name="events_welcome">What\'s going on in your city?</string>
    <string name="your_create_account">Create Your Account</string>
    <string name="hi_home">Hi %1$s!</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="rock">Rock</string>
    <string name="clock">Clock</string>

</resources>