<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".login.SignupFragment"
    android:padding="@dimen/spacer_16">

    <ImageView
        android:id="@+id/imageViewSignupAccount"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/spacer_48"
        app:layout_constraintBottom_toTopOf="@id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/account"
        app:tint="@color/purple" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="@dimen/spacer_24"
        android:padding="8dp"
        android:textColor="@color/text"
        android:background="@drawable/mini_button_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_hilt_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_text_name"

        />

    <EditText
        android:id="@+id/editSignupEmailAddress"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="@dimen/spacer_24"
        android:background="@drawable/mini_button_background"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:ems="10"
        android:hint="@string/hilt_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/editSignupPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <EditText
        android:id="@+id/editSignupPassword"
        android:padding="8dp"
        android:textColorHint="@color/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_24"
        android:background="@drawable/mini_button_background"
        android:textColor="@color/text"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSignupEmailAddress" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="@dimen/spacer_24"
        android:text="@string/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSignupPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>