<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacer_32"
    android:padding="@dimen/spacer_8">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?backgroundColor"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/gradient_foreground"
                android:scaleType="centerCrop"
                android:src="@drawable/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageHeart"
                android:layout_width="@dimen/spacer_64"
                android:layout_height="@dimen/spacer_64"
                android:layout_margin="@dimen/spacer_16"
                android:background="@drawable/mini_button_background"
                android:contentDescription="@string/heart_icon"
                android:padding="@dimen/spacer_16"
                android:src="@drawable/heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacer_16"
                android:textAppearance="?textAppearanceHeadline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textViewCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/default_artist" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_16"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/default_city" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>