<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imageViewActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/concert_image"
        android:foreground="@drawable/gradient_foreground"
        android:scaleType="centerCrop"
        android:src="@drawable/default_back"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconBackImage"
        android:layout_width="@dimen/spacer_48"
        android:layout_height="@dimen/spacer_48"
        android:layout_marginStart="@dimen/spacer_16"
        android:layout_marginTop="36dp"
        android:background="@drawable/mini_button_background"
        android:contentDescription="@string/back"
        android:padding="@dimen/spacer_8"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@id/imageViewActivity"
        app:layout_constraintTop_toTopOf="@id/imageViewActivity"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/imageHeart"
        android:layout_width="@dimen/spacer_48"
        android:layout_height="@dimen/spacer_48"
        android:layout_margin="@dimen/spacer_16"
        android:background="@drawable/mini_button_background"
        android:contentDescription="@string/add_favorite"
        android:padding="@dimen/spacer_8"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="@+id/iconBackImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iconBackImage"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textActivityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/default_artist"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textActivityName">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="@dimen/spacer_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:contentPadding="@dimen/spacer_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewType"
                    android:layout_width="@dimen/spacer_32"
                    android:layout_height="@dimen/spacer_32"
                    android:layout_marginStart="@dimen/spacer_16"
                    android:contentDescription="@string/event_type"
                    android:src="@drawable/confetti"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textEventType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rock"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageViewType" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_16"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="@dimen/spacer_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewEventType"
            card_view:contentPadding="@dimen/spacer_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCalendar"
                    android:layout_width="@dimen/spacer_32"
                    android:layout_height="@dimen/spacer_32"
                    android:layout_marginStart="@dimen/spacer_16"
                    android:contentDescription="@string/calender"
                    android:src="@drawable/calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageViewCalendar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_16"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="@dimen/spacer_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewDate"
            card_view:contentPadding="@dimen/spacer_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageTime"
                    android:layout_width="@dimen/spacer_32"
                    android:layout_height="@dimen/spacer_32"
                    android:layout_marginStart="@dimen/spacer_16"
                    android:contentDescription="@string/clock"
                    android:src="@drawable/clock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacer_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/default_time"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="@+id/imageTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAdrees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_16"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="@dimen/spacer_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewClock"
            card_view:contentPadding="@dimen/spacer_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewAdrees"
                    android:layout_width="@dimen/spacer_32"
                    android:layout_height="@dimen/spacer_32"
                    android:layout_marginStart="@dimen/spacer_16"
                    android:contentDescription="@string/calender"
                    android:src="@drawable/adress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textAdrees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacer_16"
                    android:text="@string/default_city"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewAdrees"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewAdrees"
                    app:layout_constraintTop_toTopOf="@+id/imageViewAdrees" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacer_16"
        app:layout_constraintBottom_toTopOf="@id/btnUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_16"
        android:background="@drawable/button_background"
        android:padding="@dimen/spacer_8"
        android:text="@string/buy_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>