<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignInFragment"
    android:background="?backgroundColor">

            <ImageView
                android:id="@+id/imageViewAccount"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toTopOf="@id/editTextTextEmailAddress"
                android:src="@drawable/account"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/spacer_48"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hilt_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer_24"
                android:autofillHints=""
                android:textColor="@color/text"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/btn_sign_in"
                android:layout_margin="@dimen/spacer_24"
                app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
                />

</androidx.constraintlayout.widget.ConstraintLayout>
